--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.3",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "eslint": "8.33.0",
@@ -25,6 +26,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-query": "^3.39.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
