--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.2",
     "next": "13.1.6",
+    "qss": "^2.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
