--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "date-fns": "^2.29.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "formik": "^2.2.9",
     "framer-motion": "^9.0.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
