--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^9.0.2",
     "next": "13.1.6",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
