--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@uiw/react-md-editor": "^3.20.5",
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
     "cookie": "^0.5.0",
@@ -24,13 +25,17 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.2.4",
+    "mermaid": "^10.0.2",
     "next": "13.2.4",
+    "next-remove-imports": "^1.0.10",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
+    "rehype-rewrite": "^3.0.6",
+    "rehype-sanitize": "^5.0.1",
     "typescript": "4.9.5",
     "yup": "^1.0.2"
   },
