refactor: using only oauth providers

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.2.4",
     "@uiw/react-md-editor": "^3.20.10",
     "axios": "^1.4.0",
+    "class-transformer": "^0.5.1",
     "clsx": "^1.2.1",
     "cookie": "^0.5.0",
     "date-fns": "^2.30.0",
@@ -27,6 +28,7 @@
     "framer-motion": "^10.12.12",
     "mermaid": "^10.1.0",
     "next": "13.4.2",
+    "next-auth": "^4.22.1",
     "next-remove-imports": "^1.0.11",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
